<resources>
    <string name="app_name">Udrive</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_message">Name</string>
    <string name="surname_message">Surname</string>
    <string name="password_message">Password</string>
    <string name="place_message">City</string>
    <string name="email_message">Email</string>
    <string name="register_message">Please fill this form to complete your registration:</string>
    <string name="button_login">Login</string>
    <string name="button_singup">Sign up</string>
    <string name="button_register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_users">My unity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="new_game">New Game</string>
    <string name="help">Help</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="folders">Folders</string>
    <string name="files">Files</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="email_error">This email address is invalid</string>
    <string name="password_error">This password is too short</string>
    <string name="error_emptyFields">Please fill the form, don\'t leave any field blank</string>
    <string name="success_login">You are successfully login!</string>
    <string name="error_login">Email/password is incorrect!</string>
    <string name="success_register">You are successfully registered!</string>
    <string name="invalidJsonResponse">Error Occurred [Server\'s JSON response might be invalid]!</string>
    <string name="resourceNotFound">Requested resource not found</string>
    <string name="error_serverEnd">Something went wrong at server end</string>
    <string name="unexpected_error">Unexpected Error occurred! [Most common Error: Device might not be connected to Internet or remote server is not up and running]</string>
    <string name="wait">Please wait...</string>
    <string name="home_subtitle">See your local content</string>
    <string name="share_title">Share with me</string>
    <string name="share_subtitle">Content share with you</string>
    <string name="preferences_title">Preferences</string>
    <string name="preferences_subtitle">Change your preferences</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ipPortTitle"><u>Enter the IP address under which the server is running and port:</u></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_upload_file">UploadFile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="exit_message">Click again to exit</string>
</resources>
