<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    tools:context="tp.taller2.udrive.RegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_message"
        android:textSize="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"/>
    <EditText android:id="@+id/newUsername_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_message" />
    <EditText android:id="@+id/newPassword_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType= "textPassword"
        android:hint="@string/password_message" />
    <EditText android:id="@+id/email_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_message"
        android:inputType="textEmailAddress"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="registerMessage"
        android:text="@string/button_register" />
</LinearLayout>
