<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tp.taller2.udrive.LoginActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:paddingTop="50dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/udrive" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/email_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="arial"
                android:inputType="textEmailAddress"
                android:hint="@string/email_message"
                android:textSize="20sp"
                android:singleLine="true"
                android:theme="@style/EditTextTheme"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/password_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType = "textPassword"
                android:fontFamily="arial"
                android:hint="@string/password_message"
                android:textSize="20sp"
                android:singleLine="true"
                android:theme="@style/EditTextTheme"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/login_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="#e30000"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="50dp">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:onClick="loginMessage"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:text="@string/button_login"
            android:background="@drawable/radioussolidbutton"
            android:textColor="#ffffff"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:onClick="singUpMessage"
            android:text="@string/button_singup"
            android:layout_weight="1"
            android:background="@drawable/borderbutton"
            android:textColor="#0D7694"/>
    </LinearLayout>
    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:autoLink="all"
        android:linksClickable="true"
        android:textColor="#000000"
        android:textStyle="italic"
        android:onClick="singUpMessage"
        android:textSize="13sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
